overflow-fixed

--- a/src/components/NavBar/navmenu.css
+++ b/src/components/NavBar/navmenu.css
@@ -4,7 +4,7 @@ nav {
     padding: 10px;
     background-color: white;
     box-shadow: -5px 9px 10px rgba(199, 199, 199, 0.6);
-    z-index: 99999;
+    z-index: 10;
     margin-bottom: 30px;
 }
 
@@ -63,6 +63,7 @@ nav li:first-child {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    z-index: 10;
 }
 
 .sidebar li {
